--- a/.classpath
+++ b/.classpath
@@ -3,4 +3,18 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx.jar" sourcepath="C:/Libgdx/sources/gdx-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Libgdx/docs/api/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-android.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-gwt.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-headless.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-jglfw.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-jglfw-natives.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-lwjgl.jar" sourcepath="C:/LibGDX/sources/gdx-backend-lwjgl-sources.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-lwjgl-natives.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-backend-robovm.jar"/>
+	<classpathentry kind="lib" path="C:/LibGDX/gdx-natives.jar"/>
 </classpath>
